--- a/AaronDemo/app/src/main/res/layout/activity_escapestring.xml
+++ b/AaronDemo/app/src/main/res/layout/activity_escapestring.xml
@@ -8,7 +8,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:background="@android:color/holo_blue_dark">
+        android:background="@android:color/holo_blue_dark"
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/back"
