--- a/AaronDemo/aaronTools/src/main/res/values/attrs.xml
+++ b/AaronDemo/aaronTools/src/main/res/values/attrs.xml
@@ -1,5 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--  ============================BarView  Andy=========================== -->
+    <!--自定义TopBar属性-->
+    <declare-styleable name="TopBar">
+        <attr name="tvTitle" format="string"/>
+        <attr name="tvTitleTextSize" format="dimension"/>
+        <attr name="tvTitleTextColor" format="color|reference"/>
+        <attr name="leftTextSize" format="dimension"/>
+        <attr name="leftTextColor" format="color|reference"/>
+        <attr name="leftTitle" format="string"/>
+        <attr name="leftBackground" format="color|reference"/>
+        <attr name="rightTextSize" format="dimension"/>
+        <attr name="rightTextColor" format="color|reference"/>
+        <attr name="rightTitle" format="string"/>
+        <attr name="rightBackground" format="color|reference"/>
+    </declare-styleable>
+    <!--自定义bar-->
+    <declare-styleable name="myBar">
+        <attr name="myLeftTvTitle" format="string"/>
+        <attr name="myLeftTvSize" format="dimension"/>
+        <attr name="myLeftTvColor" format="reference|color"/>
+        <attr name="myLeftImg" format="reference|color"/>
+
+        <attr name="myRightTvTitle" format="string"/>
+        <attr name="myRightTvSize" format="dimension"/>
+        <attr name="myRightTvColor" format="reference|color"/>
+        <attr name="myRightImg" format="reference|color"/>
+
+        <attr name="myTvTitle" format="string"/>
+        <attr name="myTvSize" format="dimension"/>
+        <attr name="myTvColor" format="reference|color"/>
+    </declare-styleable>
+
+    <!--自定义MyActionBar属性-->
+    <declare-styleable name="MyActionBar">
+        <attr name="title_text" format="string"/><!-- 标题text -->
+        <attr name="title_textSize" format="dimension"/><!-- 标题字体大小 -->
+        <attr name="title_textColor" format="color|reference"/><!-- 标题字体颜色 -->
+        <attr name="left_text" format="string"/><!-- 左边text -->
+        <attr name="left_image" format="color|reference"/><!-- 左边图片 -->
+        <attr name="left_textSize" format="dimension"/><!-- 左边字体大小 -->
+        <attr name="left_textColor" format="color|reference"/><!-- 左边字体颜色 -->
+        <attr name="right_text" format="string"/><!-- 右边text -->
+        <attr name="right_image" format="color|reference"/><!-- 右边图片 -->
+        <attr name="right_textSize" format="dimension"/><!-- 右边字体大小 -->
+        <attr name="right_textColor" format="color|reference"/><!-- 右边字体颜色 -->
+        <attr name="bar_backgroundColor" format="color|reference"/><!-- 背景颜色 -->
+    </declare-styleable>
+
     <!-- 国家码 -->
     <string-array name="CountryCodes">
         <item>93,AF</item>
