--- a/AaronDemo/app/src/main/res/layout/activity_main.xml
+++ b/AaronDemo/app/src/main/res/layout/activity_main.xml
@@ -53,11 +53,11 @@
                 android:text="@string/float_windons2"/>
 
             <Button
+                android:id="@+id/my_actionbar_btn"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/height_50"
                 android:gravity="center"
-                android:text="@string/app_name"
-                android:visibility="invisible"/>
+                android:text="@string/my_actionbar"/>
 
             <Button
                 android:layout_width="match_parent"
